--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://dpg-cm5scj6n7f5s73e7rrig-a.oregon-postgres.render.com/docker_yf7t
-spring.datasource.username=docker_yf7t_user
-spring.datasource.password=2JsE4mT8tAJrnYVLeVYLx1bnjKeDyLbh
+spring.datasource.url=jdbc:postgresql://dpg-cm5sctocmk4c73crpji0-a.oregon-postgres.render.com/docker_lhfd
+spring.datasource.username=docker_lhfd_user
+spring.datasource.password=Y2W2fpKgPBqhLLTyNse4emvE36Psv7FP
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
